--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -32,65 +32,15 @@
                                 </div>
                                 <div class="form-group">
                                     <label>BG Led</label>
-                                    @Html.DropDownList("BGLed", new List<SelectListItem>
-
-                 {
-                    new SelectListItem{ Text="Yes", Value = "1" },
-                    new SelectListItem{ Text="No", Value = "0" }
-                 }, new { @class = "form-control" })
+                                    @Html.DropDownList("Type(Sub Campaign)", new List<SelectListItem>
+                                     {
+                                        new SelectListItem{ Text="BG Led", Value = "0" },
+                                        new SelectListItem{ Text="GEPS", Value = "1" }
+                                     }, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group*</label>
                                     @Html.DropDownListFor(m => m.BusinessGroupViewModels, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Geography*</label>
-
-                                    @Html.DropDownListFor(m => m.GeographyViewModels, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Status</label>
-                                    @Html.TextBoxFor(m => m.Status, new { @class = "form-control" })
-
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Child Champaign Name*</label>
-
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Child Champaign Description*</label>
-
-                                    @Html.TextBoxFor(m => m.CampaignDescription, new { @class = "form-control" })
-                                </div>
-                                <div class="form-group">
-                                    <label>Target New Pilpeline*</label>
-
-                                    @Html.TextBoxFor(m => m.TargetNewPilpeline, new { @class = "form-control" })
-
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Budget</label>
-
-                                    @Html.TextBoxFor(m => m.Budget, new { @class = "form-control" })
-
-                                </div>
-
-
-                            </div>
-                            <!-- /.col -->
-
-                            <div class="col-md-6">
-
-                                <div class="form-group">
-                                    <label>Segment*</label>
-
-                                    @Html.DropDownListFor(m => m.SegmentViewModels, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line*</label>
@@ -98,34 +48,101 @@
                                     @Html.DropDownListFor(m => m.BusinessLineViewModels, new SelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "form-control" })
 
                                 </div>
+                                <div class="form-group">
+                                    <label>Status</label>
+                                    @Html.DropDownListFor(m => m.Status, new List<SelectListItem>
+                                     {
+                                        new SelectListItem{ Text="Saved draft", Value = "0" },
+                                        new SelectListItem{ Text="Saved draft1", Value = "1" }
+                                     }, new { @class = "form-control" })
+
+                                </div>
 
 
                                 <div class="form-group">
-                                    <label>Industry*</label>
+                                    <label>Sub Champaign*</label>
 
-                                    @Html.DropDownListFor(m => m.IndustryViewModels, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group">
+                                    <label>Sub Champaign Description</label>
+
+                                    @Html.TextBoxFor(m => m.CampaignDescription, new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Theme</label>
+                                    <label>Marketing Influence Leads</label>
 
+                                    @Html.TextBoxFor(m => m.MarketingInfluenceLeads, new { @class = "form-control" })
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Marketing Generated Leads</label>
+
+                                    @Html.TextBoxFor(m => m.MarketingGeneratedLeads, new { @class = "form-control" })
+                                </div>
+
+
+                                <div class="form-group">
+                                    <label>Budget</label>
+
+                                    @Html.TextBoxFor(m => m.Budget, new { @class = "form-control" })
+
+                                </div>
+                              
+                            </div>
+                            <!-- /.col -->
+
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Theme</label>
                                     @Html.DropDownListFor(m => m.ThemeViewModels, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
-                                <div class="form-group">
-                                    <label>Start Date</label>
-                                    @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control" })
+                               <div class="form-group">
+                                   <div class="col-md-6 form-group" style="margin-left:-14px">
+                                       <label>Segment*</label>
 
-                                </div>
-                                <div class="form-group">
-                                    <label>End Date</label>
-                                    @Html.TextBoxFor(m => m.EndDate, new { @class = "form-control" })
-                                </div>
-                                <div class="form-group">
-                                    <label>Target Touch Pilpeline*</label>
+                                       @Html.DropDownListFor(m => m.SegmentViewModels, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
+                                   </div>
+                                   <div class="col-md-6 form-group">
+                                       <label>Industry*</label>
 
-                                    @Html.TextBoxFor(m => m.TargetTouchPilpeline, new { @class = "form-control" })
+                                       @Html.DropDownListFor(m => m.IndustryViewModels, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
+                                   </div>
+                                    </div>
+                               
+
+                                <div class="form-group">
+                                    <div class="col-md-6" style="margin-left:-14px"></div>
+                                    <div class="col-md-6">
+                                        <label>Geography*</label>
+                                        @Html.DropDownListFor(m => m.GeographyViewModels, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    </div>
+                                  
                                 </div>
+
+                                <div class="form-group">
+                                    <div class="col-md-6 form-group" style="margin-left:-14px">
+                                        <label>Start Date</label>
+                                        @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control" })
+                                    </div>
+                                    <div class="col-md-6 form-group">
+                                        <label>End Date</label>
+                                        @Html.TextBoxFor(m => m.EndDate, new { @class = "form-control" })
+                                    </div>
+                                    </div>
+                                <div class="form-group">
+                                    <label>Marketing Influence Opportunity</label>
+
+                                    @Html.TextBoxFor(m => m.MarketingInfluenceOpportunity, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group">
+                                    <label>Marketing Generated Opportunity</label>
+
+                                    @Html.TextBoxFor(m => m.MarketingGeneratedOpportunity, new { @class = "form-control" })
+                                </div>
+                              
                                 <!-- /.form-group -->
                                 <div class="form-group">
                                     <label>Spend*</label>
@@ -135,8 +152,6 @@
                                 <!-- /.form-group -->
 
                             </div>
-
-
 
                             <!-- /.col -->
                         </div>
