--- a/MRM/Content/Site.css
+++ b/MRM/Content/Site.css
@@ -7,6 +7,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    margin-top:15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +22,13 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+/* Set table header color wide by default light gray */
+.header-background-color {
+   background-color:#DCDCDC;
+}
+
+.td-padding {
+padding:2px;
 }
