--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -1,6 +1,7 @@
 ﻿@model MRM.Database.Model.TacticCampaign
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Tactic Campaining List";
 }
 
 <!DOCTYPE html>
@@ -8,34 +9,6 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Master List</title>
-    <style type="text/css">
-        body {
-            font-family: Arial;
-            font-size: 10pt;
-        }
-
-        table {
-            border: 1px solid #ccc;
-            border-collapse: collapse;
-            background-color: #fff;
-        }
-
-            table th {
-                background-color: #B8DBFD;
-                color: #333;
-                font-weight: bold;
-            }
-
-            table th, table td {
-                padding: 5px;
-                border: 1px solid #ccc;
-            }
-
-            table, table table td {
-                border: 0px solid #ccc;
-            }
-    </style>
 </head>
 <body>
     <div>
@@ -43,26 +16,30 @@
         {
             <h4>Tactic Campaigning Details</h4>
             <hr />
-            <table cellpadding="0" cellspacing="0">
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Campaign Desc.</th>
-                    <th>Status</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
+            <table cellpadding="0" cellspacing="0" class="table table-bordered">
+                <thead class="header-background-color">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Campaign Desc.</th>
+                        <th>Status</th>
+                        <th>Start Date</th>
+                        <th>End Date</th>
 
-                </tr>
+                    </tr>
+                </thead>
                 @foreach (var item in Model.TacticCampaigns)
                 {
-                    <tr>
-                        <td>@item.Id</td>
-                        <td>@item.Name</td>
-                        <td>@item.TacticDescription</td>
-                        <td>@item.Status</td>
-                        <td>@item.StartDate</td>
-                        <td>@item.EndDate</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Name</td>
+                            <td>@item.TacticDescription</td>
+                            <td>@item.Status</td>
+                            <td>@item.StartDate</td>
+                            <td>@item.EndDate</td>
+                        </tr>
+                    </tbody>
                 }
             </table>
             <br />
@@ -70,7 +47,7 @@
                 <tr>
                     @for (int i = 1; i <= Model.PageCount; i++)
                     {
-                        <td>
+                        <td  class="td-padding">
                             @if (i != Model.CurrentPageIndex)
                             {
                                 <a href="javascript:PagerClick(@i);">@i</a>
